# pan-os-scripts

./: .coveragerc  .gitignore  .pyup.yml  .travis.yml  README.md  config.yml.example  pan-export.py  pancompare.py  pancompare_tests.py  panexport.py  panobjectfinder.py  pyproject.toml  requirements-tests.txt  requirements.txt  test_pancompare.py  test_panexport.py  test_panobjectfinder.py
panosscripts/: __init__.py  models.py  pancompare.py  panexport.py
testfiles/: filters_test.yml  filters_test_issue16.yml  panexport_golden_output.xlsx  pushed_shared_policy.xml  raw_dataplane_allmatch.txt  raw_dataplane_somematch.txt  test_objectlist.yml  test_rules.xml
tests/: test_pancompare.py  test_panexport.py
tests/testfiles/: panexport_golden_output.xlsx  raw_dataplane_nomatch.txt
