[tool.poetry]
name = "pan-os-scripts"
version = "0.1.0"
description = ""
authors = ["Jay Shepherd <shepherdjay@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.1"
pan-python = "^0.16.0"
pyyaml = "^5.3.1"
xmltodict = "^0.12.0"
xlsxwriter = "^1.2.8"
netaddr = "^0.7.19"
tablib = "^1.1.0"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
openpyxl = "^3.0.3"
pandas = "^1.0.3"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
